# openai-agents-rust

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  verify.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  model_provider.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: publish.yml  tests.yml
crates/openai-agents/: Cargo.toml
crates/openai-agents-macros/: Cargo.toml
crates/openai-agents-macros/src/: lib.rs
crates/openai-agents/examples/: handoffs.rs  hello_world.rs  lifecycle.rs  sessions.rs  stream_function_call_args.rs  stream_items.rs  stream_text.rs  structured_output.rs  tools.rs
crates/openai-agents/src/: agent.rs  config.rs  error.rs  guardrail.rs  handoff.rs  lib.rs  lifecycle.rs  result.rs  runner.rs  stream_events.rs  streaming.rs  tool.rs  tracing_impl.rs
crates/openai-agents/src/models/: mod.rs  openai_chat_completions.rs  openai_responses.rs
crates/openai-agents/src/session/: mod.rs  sqlite.rs
crates/openai-agents/tests/: test_agent.rs  test_error.rs  test_streaming.rs
docs/: FEATURE_PARITY.md  TASK.md
examples/: stream_text.rs
examples/basic/: handoffs.rs  hello_world.rs  sessions.rs  tools.rs
