[workspace]
resolver = "2"
members = [
    "crates/openai-agents",
    "crates/openai-agents-macros",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Moses Gameli <ai@mosesgameli.com>"]
repository = "https://github.com/mosesgameli/openai-agents-rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAI client
async-openai = "0.26"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Async traits
async-trait = "0.1"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Futures
futures = "0.3"

# Proc macros
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Schema generation
schemars = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
