[package]
name = "openai-agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "OpenAI Agents SDK for Rust - A lightweight framework for building multi-agent workflows"
keywords = ["openai", "agents", "ai", "llm", "async"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-openai = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
rand = "0.10"
schemars = { workspace = true }

# Procedural macros
openai-agents-macros = { version = "0.1.0", path = "../openai-agents-macros" }

# Optional features
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"], optional = true }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
insta = { version = "1.34", features = ["json"] }
dotenvy = "0.15"

[features]
default = ["sqlite-session"]
sqlite-session = ["sqlx"]
redis-session = ["redis"]
full = ["sqlite-session", "redis-session"]
